# robotics-playground

./: .gitignore  .yamllint.yaml  CLAUDE.md  Makefile  README.md
.github/workflows/: ci.yaml  containers.yaml  validate-manifests.yaml
backend/: Containerfile  hellaenergy-ros2.repo  pyproject.toml
backend/src/robotics_playground/: config.py  main.py  mock_policy.py  mock_robot.py  rerun_logger.py  session.py
backend/src/robotics_playground/bridges/: __init__.py  mock_bridge.py  protocol.py  ros2_bridge.py
backend/src/robotics_playground/policy/: __init__.py  embodiment_adapter.py  mock_client.py  openpi_client.py  protocol.py
backend/tests/: conftest.py  test_bridges.py  test_config.py  test_embodiment_adapter.py  test_health.py  test_integration.py  test_mock_policy.py  test_mock_robot.py  test_msgpack_numpy.py  test_openpi_client.py  test_policy_mock.py  test_rerun_logger.py  test_ros2_bridge.py  test_session.py  test_session_lockstep.py  test_websocket.py
deploy/: compose.yaml
deploy/config/: playground-external.yaml  playground-ros2.yaml  playground.yaml
deploy/isaac-sim/: launch_ros2_scene.py
deploy/kustomize/: backend-deployment.yaml  backend-service.yaml  configmap.yaml  isaac-lab-configmap.yaml  isaac-lab-deployment.yaml  kustomization.yaml  ui-deployment.yaml  ui-service.yaml  zenoh-backend-config.json5
docs/spikes/: 2026-07-03-hummingbird-rerun-compatibility.md
frontend/: Containerfile  eslint.config.mjs  nginx.conf  package-lock.json  package.json  tsconfig.json  webpack.config.js
frontend/public/: rerun-viewer.html
(+52 files in other folders)
