[project]
name = "robotics-playground"
version = "0.0.1"
description = "Robotics Playground backend — orchestration proxy for robot policy models"
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic-settings>=2.7.0",
    "pyyaml>=6.0",
    "rerun-sdk>=0.22.0",
    "numpy>=1.26.0",
    "msgpack>=1.0",
    "websockets>=12.0",
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-anyio>=0.0.0",
    "httpx>=0.28.0",
    "ruff>=0.9.0",
    "anyio>=4.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "anyio>=4.14.1",
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-anyio>=0.0.0",
    "ruff>=0.15.20",
]
